Kata 7
Ejercicio 7 resuelto, se plana la movieList  para luego hacer un map y validar los parametros pedidos ID,title y boxArt, al boxart se le pasa un stream para obtener su width y height a los cuales les hacemos un reduce dandole una condicional terneario, luego un map para asi obtener el URL portada y guardalo en lista.